syntax = "proto3";

package isa1.isaProject1.grpc;
option csharp_namespace = "MQuince.Integration.HospitalApp.Protos";

message MessagePharmacy{
  string name=1;
}

message MessagePharmacyResponse {
  string name=1;
  string status = 2;
}

