syntax = "proto3";

package isa1.isaProject1.grpc;
option csharp_namespace = "MQuince.Integration.HospitalApp.Protos";
import "Protos/model.proto";

service SpringGrpcService{
  rpc communicate (MessagePharmacy) returns (MessagePharmacyResponse);
}
